ポートフォリオへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
       <title>金子のホームページ</title>
     </head>
     <body>
-        金子涼太です。<br><br>
+        <h1><center>自己紹介</center></h1>
+        金子涼太（かねこりょうた）です。<br><br>
         誕生日は2001年9月14日、乙女座です。<br>
         血液型はO型。<br>
-        出身地は千葉県船橋市。<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        出身地は千葉県船橋市。<br>
+        趣味はカメラ。使用しているカメラはEOS M6 MarkⅡ。<br><br>
+        <a href="ポートフォリオ.html">ポートフォリオ（大学一年）</a><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         スクロールしていただき、ありがとうございます( ^ω^ )<br><br><br>
         <a href="作品集.html">謎の映像作品集</a>
     </body>
