ポートフォリオ追加

--- a/ポートフォリオ.html
+++ b/ポートフォリオ.html
@@ -8,7 +8,10 @@
         <h1><center>ポートフォリオ（大学一年）</center></h1>
         <p><center>金子が大学一年生の時に授業で製作した作品集です。</center></p>
         <br>
-        <br>
+        <h2>A＆Dプロジェクト</h2>
+        <ul>
+            <li>ポートフォリオ</li>
+        </ul>
         <h2>デジタルメディアⅡ</h2>
         <ul>
             <li>ポスター製作『船橋大神宮灯明台』</li>
@@ -20,7 +23,23 @@
             <li>プロセスドキュメント『ゲームをクリアするまで』<br>
                 テーマがプロセスドキュメントで、私はゲームを題材にしました。<br>
                 撮影時はゲーム機を渡してゲームを遊ばせて、それを撮るというやり方をしました。<br>
-                指示はほとんど出しておらず、会話をしながら和気藹々と撮りましたが、編集の際に会話が入っていたのでモヤモヤしました。</li><br>
+                指示はほとんど出しておらず、会話をしながら和気藹々と撮りましたが、編集の際に会話が入っていたのでモヤモヤしました。</li>
+        </ul>
+        <h2>メディア基礎実習a</h2>
+        <ul>
+            <li>水田記念図書館の紹介
+            </li>
+            <li>MV制作『クリスマス・イブ』
+            </li>
+        </ul>
+        <h2>デジタルアプリケーションⅡ</h2>
+        <ul>
+            <li>自己紹介プレゼンテーション</li>
+        </ul>
+        <h2>サウンド表現論</h2>
+        <ul>
+            <li>作曲
+            </li>
         </ul>
     </body>
 </html>
